# CoachCall-Backend

./: .dockerignore  .gitignore  Dockerfile  alembic.ini  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: automate-deploy-on-azure.yml
alembic/: env.py
alembic/versions/: 1a275242b628_drop_blacklisted_tokens_table.py  2594308e33b8_fix_time_base_column_to_using_proper_.py  2c9fdf1d980b_add_fields_to_taskcompletion_model_to_.py  43a408b2db7e_add_completed_at_to_session_and_add_.py  4bd8da772649_add_cascading_delete_for_session_.py  4c909b4b64d8_update_relation_of_session_and_course_.py  51c6cd722f18_make_experience_levels_global_by_.py  57b37a195927_update_course_table.py  598c4bc054ec_add_new_passwordresettoken_table_to_.py  59a56e19b41f_add_total_session_time_is_the_session_.py  62fcfd48130f_adding_whole_project_database_table_.py  76f1cfa204f7_fix_uuid.py  9615efdea308_remove_display_name_from_athlete_table.py  9670e91b9f30_initial_migration_with_user_and_token_.py  989b75234531_adding_profile_to_user.py  9ab5c845ffb3_add_is_archived_in_course_and_status_in_.py  ba8f0d64f91b_add_athlete_profile_group_and_scoring_.py  d14839085523_add_has_completed_onboarding_to_user_.py  f14ba2d961d8_adding_status_in_session_table.py  f453e863a96a_update_column_in_user.py
monitoring/grafana/: grafana-lite.ini
monitoring/loki/: loki-config.yml
monitoring/prometheus/: prometheus.dev.yml  prometheus.prod.yml
monitoring/promtail/: promtail-config.yml
requirements/: base.txt  dev.txt
src/: api.py  config.py  database.py  exception.py  main.py  pagination.py
src/analytics/: constants.py  router.py  schemas.py  service.py  utils.py
src/athlete/: models.py  router.py  schemas.py  service.py
src/auth/: config.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
src/course/: insights.py  models.py  router.py  schemas.py  service.py
src/password_reset/: router.py  schemas.py  service.py  utils.py
src/profile/: config.py  router.py  schemas.py  service.py
src/rubrics/: constants.py  router.py  schemas.py
src/upload/: config.py  schemas.py  service.py
tests/: conftest.py  test_main.py
(+18 files in other folders)
